--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>novachat</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="aseets/css/index.css">
+    <link rel="stylesheet" href="web/assets/css/index.css">
 </head>
 
 <body>
     
     <div class="container">
         <div class="form-box login">
-            <form action="db/login.php" method="POST">
+            <form action="web/assets/db/login.php" method="POST">
                 <h1>login</h1>
                 <div class="input-box">
                     <input type="text" name="user" placeholder="username" required>
