modificaciones de la barra menu

--- a/web/assets/admin.html
+++ b/web/assets/admin.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Gestión de Usuarios</title>
+    <link rel="stylesheet" href="css/estilos_barra_menu.css">
     <link rel="stylesheet" href="css/usuarios.css">
 </head>
 <body>
+
+    <header>
+        <div class="superior">
+            <div class="logo">
+                <img src="images/iconos/logo.jpg" alt="logo">
+            </div>
+            <div class="search">
+                <br><h1>Vista en tiempo reals</h1><br>
+            </div>
+        </div>
+
+        <div class="container__menu">
+            <nav>
+                <ul>
+                    <li><a href="menu.html"></a></li>
+                    <li><a href="live-view.html" >Vista en tiempo real</a></li>
+                    <li><a href="incidents.html" >Historico de incidentes</a></li>
+                    <li><a href="statistics.html" >Estadisticas</a></li>
+                    <li><a href="" id="selected">Administracion</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header><br>
+
     <div class="container">
         <div class="header">
             <h1>Sistema de Gestión de Usuarios</h1>
