areglo de agregar usuarios

--- a/web/assets/incidents.html
+++ b/web/assets/incidents.html
@@ -27,7 +27,7 @@
                     <li><a href="live-view.html" >Vista en tiempo real</a></li>
                     <li><a href="" id="selected">Historico de incidentes</a></li>
                     <li><a href="statistics.html" >Estadisticas</a></li>
-                    <li><a href="admin.html" >Administracion</a></li>
+                    <li><a href="admin.php" >Administracion</a></li>
                 </ul>
             </nav>
         </div>
