--- a/web/assets/menu.html
+++ b/web/assets/menu.html
@@ -26,7 +26,7 @@
                     <li><a href="live-view.html" >Vista en tiempo real</a></li>
                     <li><a href="incidents.html" >Historico de incidentes</a></li>
                     <li><a href="statistics.html" >Estadisticas</a></li>
-                    <li><a href="admin.html" >Administracion</a></li>
+                    <li><a href="admin.php" >Administracion</a></li>
                 </ul>
             </nav>
         </div>
