--- a/web/assets/statistics.html
+++ b/web/assets/statistics.html
@@ -32,7 +32,7 @@
                             <li><a href="live-view.html" >Vista en tiempo real</a></li>
                             <li><a href="incidents.html" >Historico de incidentes</a></li>
                             <li><a href="" id="selected">Estadisticas</a></li>
-                            <li><a href="admin.html" >Administracion</a></li>
+                            <li><a href="admin.php" >Administracion</a></li>
                         </ul>
                     </nav>
                 </div>
