--- a/web/assets/incidents.html
+++ b/web/assets/incidents.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico de Incidentes - Sistema de Monitoreo</title>
     <link rel="stylesheet" href="css/estilos_barra_menu.css">
+    <link rel="stylesheet" href="css/historial.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
 </head>
