--- a/web/assets/live-view.html
+++ b/web/assets/live-view.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista en Tiempo Real - Sistema de Monitoreo</title>
     <link rel="stylesheet" href="css/estilos_barra_menu.css">
+    <link rel="stylesheet" href="css/live-view.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
