parte de ayuda, aun sin funcionar

--- a/web/assets/incidents.html
+++ b/web/assets/incidents.html
@@ -13,9 +13,6 @@
 
     <header>
         <div class="superior">
-            <div class="logo">
-                <img src="images/iconos/logo.jpg" alt="logo">
-            </div>
             <div class="search">
                 <br><h1>Historial de incidentes</h1><br>
             </div>
@@ -29,6 +26,8 @@
                     <li><a href="" id="selected">Historico de incidentes</a></li>
                     <li><a href="statistics.html" >Estadisticas</a></li>
                     <li><a href="admin.php" >Administracion</a></li>
+                    <li><a href="ayuda.html" >Ayuda</a></li>
+                    <li><a onclick="window.location.href='../../index.html'">cerrar sesion</a></li>
                 </ul>
             </nav>
         </div>
