--- a/web/assets/statistics.html
+++ b/web/assets/statistics.html
@@ -18,9 +18,6 @@
         <div class="main-content">
             <header>
                 <div class="superior">
-                    <div class="logo">
-                        <img src="images/iconos/logo.jpg" alt="logo">
-                    </div>
                     <div class="search">
                         <br><h1>Historial de incidentes</h1><br>
                     </div>
@@ -34,6 +31,8 @@
                             <li><a href="incidents.html" >Historico de incidentes</a></li>
                             <li><a href="" id="selected">Estadisticas</a></li>
                             <li><a href="admin.php" >Administracion</a></li>
+                            <li><a href="ayuda.html" >Ayuda</a></li>
+                            <li><a onclick="window.location.href='../../index.html'">cerrar sesion</a></li>
                         </ul>
                     </nav>
                 </div>
